air time controller updated

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^8.1",
         "fintech/core": "*",
+        "fintech/transaction": "*",
         "illuminate/contracts": "^10.0",
         "owen-it/laravel-auditing": "^13.5"
     },
