composer json typo fixed

--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
         "laravel": {
             "providers": [
                 "Fintech\\Airtime\\AirtimeServiceProvider",
-                "Fintech\\Airtime\\RouteSrviceProvider",
+                "Fintech\\Airtime\\RouteServiceProvider",
                 "Fintech\\Airtime\\RepositoryServiceProvider",
                 "Fintech\\Airtime\\EventSrviceProvider"
             ],
