--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "php": "^8.1",
         "fintech/core": "*",
         "fintech/transaction": "*",
-        "illuminate/contracts": "^10.0",
-        "owen-it/laravel-auditing": "^13.5"
+        "illuminate/contracts": "^10.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
