--- a/composer.json
+++ b/composer.json
@@ -61,8 +61,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Fintech\\Airtime\\AirtimeServiceProvider",
-                "Fintech\\Airtime\\EventServiceProvider"
+                "Fintech\\Airtime\\AirtimeServiceProvider"
             ],
             "aliases": {
                 "Airtime": "Fintech\\Airtime\\Facades\\Airtime"
