--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "fintech/core": "*",
         "fintech/business": "*",
         "fintech/transaction": "*",
-        "illuminate/contracts": "^11.0"
+        "illuminate/contracts": "^11.0",
+        "owen-it/laravel-auditing": "^13.5"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
